--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/limlance99/train_game#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "http-server": "^0.12.3",
     "socket.io": "^2.3.0"
   },
