--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "train game",
   "main": "index.js",
   "scripts": {
-    "socket": "nodemon .\\backend\\server.js",
-    "start": "http-server .\\frontend",
-    "socket-mac": "nodemon server.js",
-    "start-mac": "http-server ./frontend"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
