--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "train game",
   "scripts": {
     "start": "nodemon server.js",
-    "dev" : "(cd frontend && npm run build) && npm run start"
+    "dev": "(cd frontend && npm run build) && npm run start"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "http-server": "^0.12.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "vue-js-modal": "^2.0.0-rc.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
