--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.9",
     "vuex": "^3.4.0"
